--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ h2{
 footer{
     text-align: center;
     padding: 1em;
-    background-color: #7A4FB1;
+    color: whitesmoke ;
 }
 
 .carousel{
@@ -149,4 +149,34 @@ h2{
 
 .form-contacto{
     margin: 0vw 20vw;
+}
+
+.container-pharma{
+    background-color: #7A4FB1;
+    padding: 0em 5em;
+}
+
+iframe{
+    border-radius: 5px;
+}
+
+.lastUnits{
+    background-color: rgb(226, 41, 41);
+    color: yellow;
+    padding: 1em;
+}
+
+.available-stock{
+    background-color: white;
+    padding: 1em;
+}
+
+.title-pharma{
+    padding: 2em;
+    font-size:calc(1.2em + 1.2vw); 
+    background-color: #7A4FB1;
+}
+
+h3,h5{
+    text-align: center;
 }
