--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body{
     font-family: 'Mulish', sans-serif;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -30,7 +29,7 @@ body{
 }
 
 .ubication-flex{
-    margin-top: 2em;
+    margin-top: 5em;
     color: white;
     display: flex;
 }
@@ -77,15 +76,16 @@ h1{
     font-size: calc(1em + 1vw);
     font-weight: bold;
     color:  #FF5C5C;
-    padding: 0.5em;
 }
 h2{
     text-align: center;
 }
 
-.text-inicio{
+.box-texto{
     font-size: calc(0.6em + 0.6vw);
     color: whitesmoke;
+    padding:1.5em;
+    margin-left: 1.5em;
 }
 
 .info-index{
@@ -101,7 +101,7 @@ footer{
 }
 
 .carousel{
-margin: 3em;
+margin: 1.5em;
 }
 
 .ubication-maps{
@@ -138,7 +138,6 @@ h2{
 
 .container-form{
     background-color:#7A4FB1;
-    text-align: center;
     color: whitesmoke;
 }
 
@@ -148,7 +147,8 @@ h2{
 }
 
 .form-contacto{
-    margin: 0vw 20vw;
+    align-content: center;
+    padding: 2vw 10vh;
 }
 
 .container-pharma{
@@ -179,4 +179,26 @@ iframe{
 
 h3,h5{
     text-align: center;
+}
+
+.invalid-feedback{
+    color: whitesmoke!important;
+    font-style: italic;
+}
+.button-enviar{
+    text-align: center;
+}
+
+.somos-home{
+    margin-top: 4vh;
+   padding: 1.5em;
+}
+
+.container-fluid p{
+    color: whitesmoke;
+}
+
+.container-title{
+    padding: 2em;
+    background-color: #7A4FB1;
 }
