--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Mulish', sans-serif;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 40s ease infinite;
 }
 
 @keyframes gradient {
@@ -20,12 +20,13 @@ body{
 
 .logo-primary{
     width: 12em;
+    margin-top: 1.5em;
 }
 
 .header-flex{
     display: flex;
     justify-content: space-around;
-    background-color: #7A4FB1;
+   
 }
 
 .ubication-flex{
@@ -52,6 +53,7 @@ ion-icon {
 }
 
 .nav{
+    background-color: rgba(121, 78, 177, 0.2);
     padding: 0px;
 
 }
@@ -67,15 +69,15 @@ a{
 
 .container-carousel{
     padding-right: 2em;
-    background-color: #7A4FB1;
+
 
 }
 
 h1{
     text-align: center;
     font-size: calc(1em + 1vw);
-    font-weight: bold;
-    color:  #FF5C5C;
+    font-weight: bolder;
+    color: whitesmoke;
 }
 h2{
     text-align: center;
@@ -90,7 +92,7 @@ h2{
 
 .info-index{
     padding: 0em 5em;
-    background-color: #7A4FB1;
+   
     text-align: center;
 }
 
@@ -108,7 +110,7 @@ margin: 1.5em;
     padding: 2em;
 
    text-align: center;
-   background-color: #7A4FB1;
+   
 }
 
 .text-carousel{
@@ -120,24 +122,24 @@ img{
 }
 
 .info-maps{
-    color: #FF5C5C;
+    color: whitesmoke;
     font-size: calc(2em + 2vw);
     font-weight: bolder;
     text-align: center;
 }
 
 h2{
-    color: #FF5C5C;  
+    color: whitesmoke;  
 }
 
 .text-ubication{
-    color: #FF5C5C;
+    color: whitesmoke;
     font-size: 2em;
     font-weight: bold;
 }
 
 .container-form{
-    background-color:#7A4FB1;
+    
     color: whitesmoke;
 }
 
@@ -152,7 +154,6 @@ h2{
 }
 
 .container-pharma{
-    background-color: #7A4FB1;
     padding: 0em 5em;
 }
 
@@ -161,9 +162,10 @@ iframe{
 }
 
 .lastUnits{
-    background-color: rgb(226, 41, 41);
+ 
     color: yellow;
     padding: 1em;
+    background-color: rgb(196, 25, 20);
 }
 
 .available-stock{
@@ -174,7 +176,7 @@ iframe{
 .title-pharma{
     padding: 2em;
     font-size:calc(1.2em + 1.2vw); 
-    background-color: #7A4FB1;
+  
 }
 
 h3,h5{
@@ -200,5 +202,5 @@ h3,h5{
 
 .container-title{
     padding: 2em;
-    background-color: #7A4FB1;
+ 
 }
