Solo faltan agregar extras y pulir algun detalle

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Mulish', sans-serif;
+    font-family: 'Recursive', sans-serif;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 40s ease infinite;
@@ -17,20 +17,23 @@ body{
 	}
 }
 
-
 .logo-primary{
-    width: 12em;
+    width: 10em;
     margin-top: 1.5em;
 }
 
 .header-flex{
+    margin-top: -1em;
     display: flex;
-    justify-content: space-around;
-   
+    justify-content: space-around; 
+}
+
+.header-page{
+    margin-bottom: -0.5em;
 }
 
 .ubication-flex{
-    margin-top: 5em;
+    margin-top: 4em;
     color: white;
     display: flex;
 }
@@ -45,22 +48,26 @@ ion-icon {
 
 .ubication-text{
     font-weight: bold;
+    font-family: 'Recursive', sans-serif;
     margin-top: 1vh;
 }
 
 .logo-ubication{
-    width: 2em;
+    width: 1.2em;
+    margin-right: 0.5em;
 }
 
 .nav{
-    background-color: rgba(121, 78, 177, 0.2);
-    padding: 0px;
+    background-color: rgba(121, 78, 177, 0.3);
+    font-family: 'Recursive', sans-serif;
+    margin: 0px;
 
 }
 
 a{
     color: white !important;
-    font-size: 1.2em;
+    font-size: 1em;
+    font-family: 'Recursive', sans-serif;
 }
 
 .nav-link:hover{
@@ -75,12 +82,14 @@ a{
 
 h1{
     text-align: center;
-    font-size: calc(1em + 1vw);
+    font-size: calc(0.7em + 0.7vw);
     font-weight: bolder;
     color: whitesmoke;
+    font-family: 'Recursive', sans-serif;
 }
 h2{
     text-align: center;
+    font-family: 'Recursive', sans-serif;
 }
 
 .box-texto{
@@ -88,18 +97,21 @@ h2{
     color: whitesmoke;
     padding:1.5em;
     margin-left: 1.5em;
+    font-family: 'Recursive', sans-serif;
 }
 
 .info-index{
     padding: 0em 5em;
-   
+    font-family: 'Recursive', sans-serif;
     text-align: center;
 }
 
 footer{
     text-align: center;
     padding: 1em;
+    font-family: 'Recursive', sans-serif;
     color: whitesmoke ;
+    background-color: rgba(121, 78, 177, 0.2);
 }
 
 .carousel{
@@ -108,13 +120,13 @@ margin: 1.5em;
 
 .ubication-maps{
     padding: 2em;
-
    text-align: center;
    
 }
 
 .text-carousel{
     font-size: calc(1em + 1vw)!important;
+    font-family: 'Recursive', sans-serif;
 }
 
 img{
@@ -129,35 +141,35 @@ img{
 }
 
 h2{
-    color: whitesmoke;  
+    color: whitesmoke;
+    font-family: 'Recursive', sans-serif;  
 }
 
 .text-ubication{
     color: whitesmoke;
     font-size: 2em;
     font-weight: bold;
+    font-family: 'Recursive', sans-serif;
 }
 
 .container-form{
     
     color: #ffffff;
-    margin-top: 1em;
-    background-color: rgba(255, 255, 255, 0.2);
+    margin-top: 4em;
 }
 
 .container-form p{
     font-size:calc(1.2em + 1.2vw); 
     padding: 0.5em;
+    font-family: 'Recursive', sans-serif;
 }
 
 .form-contacto{
     align-content: center;
     padding: 2vw 10vh;
+    font-family: 'Recursive', sans-serif;
 }
 
-.container-pharma{
-    padding: 0em 5em;
-}
 
 iframe{
     border-radius: 5px;
@@ -166,8 +178,13 @@ iframe{
 .lastUnits{
  
     color: yellow;
-    padding: 1em;
+    margin: 0em 2em;
+    padding: 0.0em 0em;
     background-color: #c41914;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Recursive', sans-serif;
 }
 
 .available-stock{
@@ -178,15 +195,14 @@ iframe{
 .title-pharma{
     padding: 2em;
     font-size:calc(1.2em + 1.2vw); 
+    font-family: 'Recursive', sans-serif;
   
 }
 
-h3,h5{
-    text-align: center;
-}
 
 .invalid-feedback{
     font-style: italic;
+    font-family: 'Recursive', sans-serif;
 }
 .button-enviar{
     text-align: center;
@@ -194,7 +210,7 @@ h3,h5{
 
 .somos-home{
     margin-top: 4vh;
-   padding: 1.5em;
+    padding: 1.5em;
 }
 
 .container-fluid p{
@@ -212,10 +228,70 @@ h3,h5{
 
 .show_hide{
     font-size: small;
+    text-align: center;
 }
 
 .description{
-    color: whitesmoke;
+    font-size: smaller;
     padding: 0.2em;
-    background-color: rgba(255, 255, 255, 0.1)!important;
+    background-color: rgba(209, 198, 198, 0.1)!important;
+    font-family: 'Recursive', sans-serif;
+}
+
+.menu-volver{
+    text-align: center;
+}
+
+.flecha-gracias{
+    width: 10em;
+}
+
+.fotos-perros img{
+    width: 20em;
+    text-align: center;
+}
+
+.fotos-perros{
+    text-align: center;
+}
+
+.tarjeta-producto{
+    background-color: rgba(246, 245, 247, 0.3)!important;
+    width: 20em;
+    margin-left: 3em;
+    border-radius: 5px;
+}
+
+.contenido{
+    text-align: center;
+}
+
+.title-producto{
+    color: whitesmoke;
+    font-size: 1.5em;
+    font-family: 'Recursive', sans-serif;
+}
+
+.precio{
+    color: rgb(82, 80, 80)!important;
+    font-size: 1.5em;
+    font-family: 'Recursive', sans-serif;
+}
+
+.dropdown-menu{
+    background-color:
+    rgba(121, 78, 177, 0.3)!important;
+}
+
+.dropdown-item:hover{
+    background-color:
+     rgba(121, 78, 177, 0.2)!important;
+}
+
+.contenido-home{
+    margin-top: 2em;
+}
+
+.container-toys{
+    margin-top: 3em;
 }
